styles/style.css
html {
    scroll-behavior: smooth;
}

body {
    background-color: #485461;
    background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
    margin-top: 100px;
    position: relative;
}

.nav-button {
    text-decoration: none;
    color: white;
}

.nav-button:hover {
    text-decoration: none;
    color: white;
    opacity: 80%;
}

hr {
    background-color: #ccc;
    max-width: 95%
}

.carousel-image {
    object-fit: cover;
}

.carousel-caption {
    text-shadow: 2px 2px 5px  black;
    left: 0%;
    right: 0%;
} 

.carousel-heading {
    font-size: 43px;
}

section {
    scroll-margin-top: 150px;
}

.button-icon {
    vertical-align: middle;
}

.text-large {
    font-size: 130%;
}

.input-icon {
    border-radius: 10px 0 0 10px;
}

.input-with-icon {
    border-radius: 0 10px 10px 0;
}

.input-more-round {
    border-radius: 10px 10px 10px 10px;
}

.form-group.required .control-label:after {
    content:"*";
    color:red;
  }

.carousel-fade .carousel-item {
	opacity: 0;
	transition-duration: 0.6s;
	transition-property: opacity;
}

.carousel-fade .carousel-item.active,
.carousel-fade .carousel-item-next.carousel-item-left,
.carousel-fade .carousel-item-prev.carousel-item-right {
	opacity: 1;
}

.carousel-fade .active.carousel-item-left,
.carousel-fade .active.carousel-item-right {
	opacity: 0;
}

.carousel-fade .carousel-item-next,
.carousel-fade .carousel-item-prev,
.carousel-fade .carousel-item.active,
.carousel-fade .active.carousel-item-left,
.carousel-fade .active.carousel-item-prev {
	transform: translateX(0);
	transform: translate3d(0, 0, 0);
}

.container-85 {
    width: 85%;
}

#submit-button {
    cursor: not-allowed;
}

